styles.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700;800;900&display=swap");
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
  display: block;
}

body {
  padding: 0rem 4rem;
  line-height: 1;
  scroll-snap-type: mandatory;
  scrollbar-width: none;
  -ms-overflow-style: none;
}

body::-webkit-scrollbar {
  display: none;
}

ol, ul {
  list-style: none;
}

html {
  scroll-behavior: smooth;
}

h1 {
  font-size: 5rem;
  font-weight: 700;
}

h2 {
  font-weight: 300;
  font-size: 2rem;
}

h3 {
  font-weight: 700;
  font-size: 1.5rem;
}

p {
  margin-bottom: 1rem;
}

body {
  font-family: "Montserrat", sans-serif;
}

a {
  text-decoration: none;
  color: black;
  font-weight: 500;
  font-size: 1rem;
}
a:hover {
  text-decoration: underline;
}

li {
  list-style: none;
  font-size: 1.25rem;
  font-weight: 500;
  margin-bottom: 0.25rem;
}

.navbar {
  display: flex;
  justify-content: space-between;
  padding: 0.5rem 0;
  align-items: center;
  border-bottom: 1px solid black;
  position: relative;
}
.navbar .navbar-logo {
  display: flex;
  align-items: center;
  cursor: pointer;
}
.navbar #mobile-menu {
  display: none;
}
.navbar .navbar-links {
  text-align: right;
}
.navbar img {
  height: 50px;
  width: auto;
  margin-right: 1rem;
}
.navbar a {
  margin-left: 3rem;
}

.banner {
  display: flex;
  justify-content: space-between;
  height: 85vh;
  margin: 1rem 0;
}
.banner .image {
  border-radius: 2px;
  width: 23%;
  box-shadow: var(--shadow);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  transition: filter 0.7s ease-in-out;
}
.banner .image:hover {
  filter: invert(100%) brightness(120%) contrast(100%);
}
.banner .one {
  background-image: url(./resources/images/one.jpg);
}
.banner .two {
  background-image: url(./resources/images/two.jpg);
}
.banner .three {
  background-image: url(./resources/images/three.jpg);
}
.banner .four {
  background-image: url(./resources/images/four.jpg);
}

.header {
  height: 50vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
}
.header h1 {
  margin-bottom: 1rem;
}

.content {
  position: relative;
}
.content .content-block {
  width: 70%;
  display: flex;
  justify-content: space-between;
  border-bottom: 1px solid black;
  padding-bottom: 3rem;
  margin-bottom: 3rem;
}
.content .content-header {
  font-weight: 700;
  margin-bottom: 2rem;
}
.content .content-text {
  text-align: justify;
  width: 70%;
  line-height: 1.5;
}

.portfolio {
  border-bottom: none !important;
}

.content-svg {
  position: absolute;
  top: 0;
  right: 0;
  z-index: -1;
}

.form-container {
  position: fixed;
  z-index: 1;
  top: 0;
  height: 100vh;
  width: 100vw;
  display: none;
  align-items: center;
  justify-content: space-between;
  transition: background-color 1s ease;
}

.form-title {
  display: flex;
  flex-direction: column;
}

.contact-button {
  opacity: 0;
  position: fixed;
  z-index: 3;
  bottom: 0;
  right: 0;
  height: 120px;
  width: 120px;
  font-size: 2rem;
  background-color: black;
  border: 5px solid black;
  box-shadow: -2px -2px 5px 0px rgba(0, 0, 0, 0.4);
  box-sizing: border-box;
  color: white;
  transition: all 0.2s ease;
}
.contact-button:hover {
  cursor: pointer;
  background-color: white;
  color: black;
}

.fade-in {
  animation: fade-in 0.5s ease-in forwards;
}

.fade-out {
  animation: fade-out 0.5s ease-in forwards;
}

@keyframes fade-in {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
@keyframes fade-out {
  from {
    opacity: 1;
  }
  to {
    opacity: 0;
  }
}
.form {
  padding: 1rem;
  box-sizing: border-box;
  background-color: white;
  width: 40%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  box-shadow: var(--hard-shadow);
}
.form input,
.form textarea,
.form select {
  padding: 0 !important;
  margin-left: 1rem;
  width: 75%;
  border: none;
  background-color: transparent;
  border-bottom: 1px solid black;
  font-size: 1.2rem;
  font-family: "Montserrat", sans-serif;
}
.form input:focus,
.form textarea:focus,
.form select:focus {
  outline: none;
}
.form textarea {
  resize: none;
  height: 10rem;
}
.form textarea::-webkit-scrollbar {
  width: 2px;
}
.form textarea::-webkit-scrollbar-track {
  background-color: transparent;
}
.form textarea::-webkit-scrollbar-thumb {
  border-radius: 10px;
  background-color: black;
  opacity: 0.5;
}
.form label {
  display: flex;
  align-items: center;
  font-size: 1.2rem;
  font-weight: 500;
  width: 25%;
}
.form #area-label {
  align-items: flex-start;
}
.form .form-row {
  display: flex;
  justify-content: space-between;
  margin-bottom: 2rem;
}
.form #close {
  position: absolute;
  right: 1rem;
}
.form .form-button {
  border-radius: 2px;
  padding: 1rem 1.25rem;
  background-color: white;
  font-size: 1.5rem;
  width: fit-content;
  transition: all 0.2s ease;
  position: relative;
  border: none;
  float: right;
}
.form .form-button:hover {
  cursor: pointer;
  color: white;
  background-color: black;
}

.svg-background {
  height: 100%;
  position: relative;
}
.svg-background svg {
  z-index: -1;
  box-sizing: border-box;
  position: absolute;
  right: 100%;
  height: 100%;
  top: 50%;
  transform: translateY(-50%);
}

.in {
  animation: in 1s ease-out forwards;
}

.out {
  animation: out 1s ease-in forwards;
}

.fade-out {
  animation: fade-out 0.5s ease-in forwards;
}

@keyframes fade-out {
  from {
    opacity: 1;
  }
  to {
    opacity: 0;
  }
}
@keyframes in {
  from {
    transform: translateX(-100%);
  }
  to {
    transform: translateX(0%);
  }
}
@keyframes out {
  from {
    transform: translateX(0%);
  }
  to {
    transform: translateX(-105%);
  }
}
.draw {
  stroke: black;
  stroke-width: 2px;
  stroke-dasharray: 3500;
  stroke-dashoffset: 3500;
  animation: draw 2s ease-out forwards;
}

.undraw {
  stroke: black;
  stroke-width: 2px;
  stroke-dasharray: 3500;
  stroke-dashoffset: 0;
  animation: undraw 1s ease-in forwards;
}

@keyframes draw {
  to {
    stroke-dashoffset: 0;
  }
}
@keyframes undraw {
  from {
    stroke-dashoffset: 0;
  }
  to {
    stroke-dashoffset: 3500;
  }
}
.footer {
  border-top: 1px solid black;
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-start;
  align-items: flex-start;
  padding-top: 2rem;
  margin-bottom: 2rem;
}
.footer .footer-logo {
  margin: 1rem 5rem 1rem 0;
  display: flex;
}

.footer .footer-logo img {
  height: 50px;
  width: auto;
  margin-right: 1rem;
}

.footer .links-container {
  display: flex;
  justify-content: space-evenly;
  width: 60%;
  flex-wrap: wrap;
}
.footer .footer-links {
  display: flex;
  flex-direction: column;
  margin: 1rem 1rem 0rem 1rem;
}
.footer .terms {
  font-size: 0.8rem;
  opacity: 0.8;
  margin: 0;
}
.footer .terms:hover {
  cursor: pointer;
  text-decoration: underline;
}

@media only screen and (max-width: 650px) {
  body {
    padding: 0rem 1rem;
  }
  .navbar .navbar-links {
    opacity: 0;
    display: flex;
    text-align: right;
    position: absolute;
    border-top: 1px solid black;
    justify-content: space-around;
    top: 100%;
    flex-direction: column;
    padding: 1rem;
    right: 0;
    height: 30vh;
    width: 50vw;
    background-color: white;
    border-radius: 0px 0px 2px 2px;
  }
  .navbar .navbar-links a {
    font-size: 2rem;
    margin: 0;
  }
  .navbar #mobile-menu {
    display: block;
  }
  .navbar #mobile-menu:hover {
    cursor: pointer;
    text-decoration: underline;
  }
  .svg-background,
  .contact-button {
    display: none;
  }
  .form {
    width: 90%;
  }
  .form .form-title {
    font-size: 3rem;
  }
  .form .form-row {
    display: block;
  }
  .form input,
  .form textarea {
    margin-left: 0;
    width: 100%;
  }
  .form label {
    margin-bottom: 1rem;
  }
  .banner {
    flex-direction: column;
  }
  .banner .image {
    height: 23%;
    width: 100%;
  }
  .header {
    text-align: left;
    align-items: flex-start;
  }
  .header h1 {
    display: flex;
    flex-direction: column;
    font-size: 3rem;
  }
  .header h2 {
    font-size: 1.5rem;
  }
  .content .content-block {
    flex-direction: column;
    width: 100%;
  }
  .content .content-text {
    width: 100%;
  }
  .footer .links-container {
    flex-direction: column;
  }
  .footer .footer-links {
    margin: 1rem 0rem;
  }
}
:root {
  --shadow: 8px 8px 7px #00000024;
  --hard-shadow: 8px 8px 7px #000000;
}

